# mip-mcp

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  build_hooks.py  debug_uvx_paths.py  package.json  pyproject.toml  pytest.ini  test_fix.py  test_simple_fix.py  test_uvx_simulation.py
.claude/: settings.json
.claude/commands/: code-review.md  design.md  requirements.md  tasks.md
.github/workflows/: ci.yml  docs.md  main.yml
.tmp/: design.md  issue2-solution-summary.md  pyodide_architecture.md  requirements.md  solver_selection_design.md  tasks.md
docs/: FUNCTIONAL_REQUIREMENTS.md  IMPLEMENTATION_PLAN.md  LLM_ENHANCED_MIP_RESEARCH.md  SYSTEM_REQUIREMENTS.md  TECHNICAL_REQUIREMENTS.md  USER_REQUIREMENTS.md
src/mip_mcp/: __init__.py  cli.py  exceptions.py  mcp_server.py  server.py
src/mip_mcp/config/: default.yaml
src/mip_mcp/executor/: __init__.py  code_executor.py  pyodide_executor.py  python_mip_executor.py  sandbox.py  universal_executor.py
src/mip_mcp/handlers/: __init__.py  execute_code.py
src/mip_mcp/models/: __init__.py  config.py  responses.py  solution.py
src/mip_mcp/solvers/: __init__.py  base.py  factory.py  scip_solver.py
src/mip_mcp/utils/: __init__.py  config_manager.py  executor_registry.py  library_detector.py  logger.py  node_dependency_manager.py  pyodide_manager.py  solution_validator.py
tests/: README.md  __init__.py  conftest.py  manual_cleanup_test.py
tests/fixtures/: sample_problems.py
tests/unit/: test_basic.py  test_handlers.py  test_models.py  test_solver_factory.py  test_subprocess_cleanup.py  test_tuple_key_fix.py  test_utils.py
