[project]
name = "mip-mcp"
version = "0.1.0"
description = "MIP optimization server using Model Context Protocol with PuLP"
readme = "README.md"
authors = [
    { name = "ohtaman", email = "ohtamans@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.6",
    "pyscipopt>=5.5.0",
    "pulp>=2.7.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
mip-mcp = "mip_mcp.mcp_server:mcp_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]

